<resources>
    <string name="app_name">Track and Trigger</string>

    <!--    <string name="default_web_client_id">56790523571-848skliamfj9m8sglq1v3b4189th3ulq.apps.googleusercontent.com</string>-->

    <string name="facebook_app_id">1259176907790320</string>
    <string name="fb_login_protocol_scheme">fb1259176907790320</string>

    <string name="SinupButton">Login</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="copyright">©BITS PILANI UNIVERSITY</string>
    <string name="logooftheapp">LogoOfTheApp</string>
    <string name="sign_up_here">Sign Up here!</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="title_activity_signupform">Signupform</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="googlelogo">GoogleLogo</string>
    <string name="gmail_address">Gmail Address</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="facebooklogo">FaceBookLogo</string>
    <string name="or">OR</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="register">Register</string>
    <string name="generate_link">Send verification link</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="Title_otpverify">Verify your Phone Number</string>
    <string name="verify_mail_otp">Verify your Gmail</string>
    <string name="VerificationDone">After verifying credentials!</string>
    <string name="SocialProfilePrompt">Or Connect with a Social Profile:</string>
    <string name="enter_your_username">Username</string>
</resources>