<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD647"
    tools:context=".otpverification">

    <Button
        android:id="@+id/OTPGeneratorMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/generate_otp"
        app:layout_constraintBottom_toTopOf="@+id/VerifyMail"
        app:layout_constraintStart_toStartOf="@+id/Mail"
        app:layout_constraintTop_toBottomOf="@+id/Mail" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/advent_pro"
        app:layout_constraintBottom_toTopOf="@+id/OTPGeneratorPhone"
        app:layout_constraintStart_toStartOf="@+id/OTPTextFieldPhone"
        app:layout_constraintTop_toBottomOf="@+id/OTPTextFieldPhone" />

    <Button
        android:id="@+id/VerifyPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:text="@string/verify"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OTPGeneratorPhone" />

    <EditText
        android:id="@+id/OTPTextFieldPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/enter_otp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/VerifyMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginBottom="114dp"
        android:text="@string/verify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/OTPGeneratorMail"
        app:layout_constraintTop_toBottomOf="@+id/OTPGeneratorMail" />

    <Button
        android:id="@+id/OTPGeneratorPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/generate_otp"
        app:layout_constraintBottom_toTopOf="@+id/VerifyPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/Mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/advent_pro"
        app:layout_constraintBottom_toTopOf="@+id/OTPGeneratorMail"
        app:layout_constraintStart_toStartOf="@+id/OTPTextFieldMail"
        app:layout_constraintTop_toBottomOf="@+id/OTPTextFieldMail" />

    <EditText
        android:id="@+id/OTPTextFieldMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/enter_otp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VerifyPhone" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Title_otpverify"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/OTPTextFieldPhone"
        app:layout_constraintStart_toStartOf="@+id/OTPTextFieldPhone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/verify_mail_otp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/OTPTextFieldMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />
</androidx.constraintlayout.widget.ConstraintLayout>